--- a/widget/button/css/widget-button.css
+++ b/widget/button/css/widget-button.css
@@ -88,6 +88,18 @@ button:focus::-moz-focus-inner {
 }
 
 
+/* focus */
+.waf-widget.waf-button.waf-state-focus {
+	 border: solid; 
+	 border-width: 1px; 
+	 border-color: #00748c; 
+	 box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.8) inset; 
+	 -moz-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.87) inset; 
+	 -webkit-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.87) inset;
+	 -ms-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.87) inset;
+	 border-radius: 3px; 
+}
+
 
 /*.waf-button:not(:hover):not(:active):not(:disabled) {
 	border: 1px dashed red;
