--- a/widget/checkbox/css/widget-checkbox.css
+++ b/widget/checkbox/css/widget-checkbox.css
@@ -97,3 +97,15 @@
 .waf-state-selected .waf-checkbox-icon.waf-icon-image .waf-checkbox-icon-active {
  	display: none;
 }
+
+/* focus */
+.waf-widget.waf-checkbox.waf-state-focus {
+	 border: solid; 
+	 border-width: 1px; 
+	 border-color: #00748c; 
+	 box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.8) inset; 
+	 -moz-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.87) inset; 
+	 -webkit-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.87) inset;
+	 -ms-box-shadow: 0px 0px 5px rgba(50, 50, 50, 0.87) inset;
+	 border-radius: 3px; 
+}
