--- a/widget/palette/css/widget-palette-cupertino.css
+++ b/widget/palette/css/widget-palette-cupertino.css
@@ -186,15 +186,10 @@
  */
 .waf-widget.waf-container {
 	background-color: rgb(255, 255, 255);
-	border-color: rgb(171, 171, 171);
-
-	/*box-shadow: inset 0 1px 0 1px rgb(222, 222, 222),
-				0 1px 1px rgb(242, 244, 245);*/
-
-		
+	border-color: rgb(171, 171, 171);		
 }
 
-.waf-splitView .waf-widget.waf-container {
+.waf-splitView .waf-widget.waf-container.waf-container-level-0.waf-level-0.waf-split-container {
 	background-color: rgb(0, 0, 0);
 	border-color: rgb(0, 0, 0);
 }
